--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
+        "laravelcollective/html": "^6.2",
         "lucascudo/laravel-pt-br-localization": "^1.1",
         "symfony/filesystem": "^5.1"
     },
