--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/ui": "^2.4",
         "laravelcollective/html": "^6.2",
         "lucascudo/laravel-pt-br-localization": "^1.1",
-        "symfony/filesystem": "^5.1"
+        "symfony/filesystem": "^5.1",
+        "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
